created new file for css styles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Joairiya Zaman Portfolio</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div>
+                <h2>Joairiya</h2>
+            </div>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><button>Contact Me</button></li>
+            </nav>
+    </header>
 </body>
 </html>
