decorated nav bar

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body class="font-open-sans">
     <header>
         <nav>
-            <div>
-                <h2>Joairiya</h2>
+            <div class="logo">
+                <h2>joai<span class="color-orange">riya</span></h2>
             </div>
-            <ul>
+            <ul class="menu">
                 <li><a href="#about">About</a></li>
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><button>Contact Me</button></li>
+                <li><button class="btn">Contact Me</button></li>
             </nav>
     </header>
 </body>
