--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><button class="btn">Contact Me</button></li>
             </nav>
+            <section id="banner">
+                <div class="banner-content">
+                    <h2>Hi, I am</h2>
+                    <h1>Joairiya Zaman</h1>
+                    <p>A passionate web developer crafting beautiful and functional websites.<br>Shot what able cold new see hold. Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                 <div>
+                    <button class="btn">Download CV</button>
+                    <button class="btn">Hire Me</button>
+                </div>
+
+            </section>
+
     </header>
 </body>
 </html>
