--- a/index.html
+++ b/index.html
@@ -34,5 +34,31 @@
             </section>
 
     </header>
+
+    <section id="about">
+        <div class="about-container">
+            <div class="section-heading">
+                <h2>About Me</h2>
+                <p>I am Joairiya Zaman, a dedicated web developer with a passion for creating stunning and user-friendly websites. I strive to deliver exceptional digital experiences. I am committed to staying updated with the latest industry trends and technologies to ensure my work remains relevant and impactful.</p>
+            </div>
+
+            <div class="about-info">
+                <div class="info-item">
+                    <p>Email:</p>
+                    <h4>joairiyazaman27@gmail.com</h4>
+                </div>
+                <div class="info-item">
+                    <p>Phone:</p>
+                    <h4>+8801704-046156</h4>
+                </div>
+                <div class="info-item">
+                    <p>From:</p>
+                    <h4>Faridpur, Bangladesh</h4>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
