designed skill box section

--- a/index.html
+++ b/index.html
@@ -59,6 +59,38 @@
             </div>
         </div>
     </section>
+<section id="skills">
+    <div class="skill-container">
+        <div class="section-heading">
+            <h2>My Skills</h2>
+            <p>I possess a diverse set of skills that enable me to create exceptional web experiences. From front-end development to back-end programming, I am proficient in various technologies and tools that help me bring ideas to life.</p>
+        </div>
+
+        <div class="skill-box">
+            <div class="skill-card">
+                <img src="images/icons/js.png" alt="JavaScript-icon">
+                <h3>JavaScript</h3>
+                <p>Experienced in building dynamic and interactive web applications using modern syntax.</p>
+            </div>
+            <div class="skill-card">
+                <img src="images/icons/react.png" alt="React-icon">
+                <h3>React</h3>
+                <p>Proficient in building component-based UI using React.</p>
+            </div>
+            <div class="skill-card">
+                <img src="images/icons/nodejs.png" alt="Node.js-icon">
+                <h3>Node.js</h3>
+                <p>Skilled in server-side development using Node.js to build scalable backend services.</p>
+            </div>
+            <div class="skill-card">
+                <img src="images/icons/mongo.png" alt="MongoDB-icon">
+                <h3>MongoDB</h3>
+                <p>Experienced in designing and managing databases with MongoDB.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 </body>
 </html>
