--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body class="font-open-sans">
@@ -19,7 +20,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><button class="btn">Contact Me</button></li>
+                <li><button class="btn"><i class="fa-solid fa-phone"></i> Contact Me</button></li>
             </nav>
             <section id="banner">
                 <div class="banner-content">
@@ -27,7 +28,7 @@
                     <h1>Joairiya Zaman</h1>
                     <p>A passionate web developer crafting beautiful and functional websites.<br>Shot what able cold new see hold. Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                  <div>
-                    <button class="btn">Download CV</button>
+                    <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
                     <button class="btn">Hire Me</button>
                 </div>
 
@@ -145,7 +146,45 @@
                     <hr>
         </div>
     </div>
+
+ <div class="text-center">
+
+      <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
+
+ </div>
+
 </section>
+
+<footer>
+    <section class="footer-container">
+        <div class="social">
+            <h2>Let's Connect</h2>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="icons">
+                 <a href="#facebook"><img src="./images/icons/facebook.png" alt=""></a>
+                 <a href="#twitter"><img src="./images/icons/twitter.png" alt=""></a>
+                 <a href="#instagram"><img src="./images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+
+        <form action="" class="form">
+            <h2>Let’s Message me</h2>
+            <div class="">
+                <input type="text" name="" id="" placeholder="Your Name">
+            </div>
+            <div class="">
+                
+                <input type="text" name="" id="" placeholder="Your Email">
+            </div>
+            <div class="">
+                <textarea rows="10" name="" id="" placeholder="Message"></textarea>
+            </div>
+            <input class="btn" type="submit" value="submit">
+
+        </form>
+
+    </section>
+</footer>
 
 </body>
 </html>
