--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><button class="btn"><i class="fa-solid fa-phone"></i> Contact Me</button></li>
+                <div>   
+                <li><button class="btn nav-btn"><i class="fa-solid fa-phone"></i> Contact Me</button></li>
+                </div>
             </nav>
             <section id="banner">
                 <div class="banner-content">
